--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "next": "16.1.4",
     "react": "19.2.3",
