--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.23",
     "html-to-image": "^1.11.13",
     "next": "^16.1.4",
