--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.23",
     "html-to-image": "^1.11.13",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
